styles.css
/*

This CSS file will be included with your plugin, and
available in the app when your plugin is enabled.

If your plugin does not need CSS, delete this file.

*/
div.statusbarOrganizerEntriesContainer {
  display: flex;
  flex-direction: column;
  gap: 1em;
  padding: 1em;
  width: 100%;
}

div.statusbarOrganizerEntry {
  background: #111111;
  border-radius: 0.25em;
  display: grid;
  grid-template-columns: 1.5em 1fr 1fr 4em;
  padding: 0.5em 1em;
  width: 100%;
}

div.statusbarOrganizerEntry > span {
  display: inline-block;
  height: 1.75em;
  line-height: 0.7;
  padding: 0.5em 0em;
}

span.statusbarOrganizerHandle {
  padding: 0 !important;
  cursor: move;
}

span.statusbarOrganizerHandle::after {
  content: '.. .. .. ..';
  display: inline-block;
  height: 1.75em;
  line-height: 0.25rem;
  padding: 0.1em 0em;
  width: 1em;
  word-wrap: normal;
}

span.statusbarOrganizerPreview {
  border-radius: 0.25em;
  margin-top: 0.2em;
  padding: 0.5em !important;
  font-size: 0.8rem;
  background: #ffffff10;
}

span.statusbarOrganizerVisibility {
  padding-top: 0.3em !important;
  cursor: pointer;
  text-align: right;
}

div.statusbarOrganizerHidden {
  height: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  visibility: hidden;
  width: 0;
}

div.statusbarOrganizerDrag {
  position: fixed;
  color: #dddddd;
  background: #333333;
}

div.statusbarOrganizerClone {
  color: #999999;
  background: #222222;
}

div.statusbarOrganizerDisabled {
  color: #555555;
  background: #080808;
}

